2013-05-15  Dongseong Hwang  <dongseong.hwang@intel.com>

        Remove an overloaded strokeRect in <canvas>
        https://bugs.webkit.org/show_bug.cgi?id=116017

        Reviewed by Benjamin Poulain.

        The canvas spec [1] does not define strokeRect with 5 arguments, so this issue
        remains only strokeRect with 4 arguments.

        [1] http://www.w3.org/TR/2dcontext2/

        Covered by existing tests: canvas/philip/tests/2d.missingargs.html

        * html/canvas/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::strokeRect):
        * html/canvas/CanvasRenderingContext2D.h:
        (CanvasRenderingContext2D):
        * html/canvas/CanvasRenderingContext2D.idl:

2013-05-15  Bruno de Oliveira Abinader  <bruno.abinader@basyskom.com>

        [css3-text] text-decoration-line now accepts "blink" as valid value
        https://bugs.webkit.org/show_bug.cgi?id=116104

        Reviewed by Andreas Kling.

        As of November 13th 2012, the W3C specification has been updated to
        accept "blink" as a valid property value in text-decoration-line. Though
        accepting the value as valid, it is ignored as CSS Level 1
        text-decoration property currently does.

        Updated related layout tests to reflect changes in specification.

        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseValue):
        (WebCore::CSSParser::parseTextDecoration):

2013-05-14  Simon Fraser  <simon.fraser@apple.com>

        Revert http://trac.webkit.org/changeset/150047
        
        It introduced unwanted behavioral differences between
        Retina and non-Retina Mac hardware.

        * platform/graphics/ca/GraphicsLayerCA.cpp:
        (WebCore::GraphicsLayerCA::requiresTiledLayer):
        (WebCore::GraphicsLayerCA::computePixelAlignment):

2013-05-15  Darin Adler  <darin@apple.com>

        [Mac] Remove the ClipboardMac class and header file
        https://bugs.webkit.org/show_bug.cgi?id=116165
