@@ -1901,6 +1901,7 @@ __ZN7WebCore6WidgetC2EP6NSView
 __ZN7WebCore7nsColorERKNS_5ColorE
 __ZN7WebCore8IntPointC1ERK8_NSPoint
 __ZN7WebCore8IntPointC1ERK7CGPoint
+__ZN7WebCore9ClipboardD1Ev
 __ZN7WebCore9FloatRectC1ERK7_NSRect
 __ZNK7WebCore10FloatPointcv8_NSPointEv
 __ZNK7WebCore14ScrollableArea18visibleContentRectENS0_36VisibleContentRectIncludesScrollbarsE
